--- a/first-network/base/docker-compose-base.yaml
+++ b/first-network/base/docker-compose-base.yaml
@@ -69,6 +69,27 @@ services:
       - 8051:7051
       - 8053:7053
 
+
+  peer2.org1.example.com:
+    container_name: peer2.org1.example.com
+    extends:
+      file: peer-base.yaml
+      service: peer-base
+    environment:
+      - CORE_PEER_ID=peer2.org1.example.com
+      - CORE_PEER_ADDRESS=peer2.org1.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.org1.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051
+      - CORE_PEER_LOCALMSPID=Org1MSP
+    volumes:
+        - /var/run/:/host/var/run/
+        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer2.org1.example.com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer2.org1.example.com/tls:/etc/hyperledger/fabric/tls
+
+    ports:
+      - 13051:7051
+      - 13053:7053
+
   peer0.org2.example.com:
     container_name: peer0.org2.example.com
     extends:
