--- a/first-network/configtx.yaml
+++ b/first-network/configtx.yaml
@@ -24,6 +24,7 @@ Profiles:
                 Organizations:
                     - *Org1
                     - *Org2
+                    - *org3
     TwoOrgsChannel:
         Consortium: SampleConsortium
         Application:
@@ -31,6 +32,7 @@ Profiles:
             Organizations:
                 - *Org1
                 - *Org2
+                - *Org3
 
 ################################################################################
 #
@@ -87,6 +89,23 @@ Organizations:
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
             - Host: peer0.org2.example.com
+              Port: 7051
+
+    - &Org3
+        # DefaultOrg defines the organization which is used in the sampleconfig
+        # of the fabric.git development environment
+        Name: Org3MSP
+
+        # ID to load the MSP definition as
+        ID: Org3MSP
+
+        MSPDir: crypto-config/peerOrganizations/org3.example.com/msp
+
+        AnchorPeers:
+            # AnchorPeers defines the location of peers which can be used
+            # for cross org gossip communication.  Note, this value is only
+            # encoded in the genesis block in the Application section context
+            - Host: peer0.org3.example.com
               Port: 7051
 
 ################################################################################
