--- a/first-network/docker-compose-cli.yaml
+++ b/first-network/docker-compose-cli.yaml
@@ -33,6 +33,13 @@ services:
       service: peer1.org1.example.com
     networks:
       - byfn
+  peer2.org1.example.com:
+    container_name: peer2.org1.example.com
+    extends:
+      file:  base/docker-compose-base.yaml
+      service: peer2.org1.example.com
+    networks:
+      - byfn
 
   peer0.org2.example.com:
     container_name: peer0.org2.example.com
@@ -94,6 +101,7 @@ services:
       - orderer.example.com
       - peer0.org1.example.com
       - peer1.org1.example.com
+      - peer2.org1.example.com
       - peer0.org2.example.com
       - peer1.org2.example.com
       - peer0.org3.example.com
