--- a/first-network/docker-compose-e2e-template.yaml
+++ b/first-network/docker-compose-e2e-template.yaml
@@ -65,6 +65,14 @@ services:
       service: peer1.org1.example.com
     networks:
       - byfn
+  
+  peer2.org1.example.com:
+    container_name: peer2.org1.example.com
+    extends:
+      file:  base/docker-compose-base.yaml
+      service: peer2.org1.example.com
+    networks:
+      - byfn
 
   peer0.org2.example.com:
     container_name: peer0.org2.example.com
